@@ -39,7 +39,7 @@
     <target name="run-test" depends="build,deploy,run,undeploy"/>
 
     <target name="clean" depends="init-common">
-      <antcall target="clean-common"/>
+        <antcall target="clean-common"/>
     </target>
 
     <target name="setup" depends="init-common">
@@ -70,43 +70,46 @@
     </target>
 
     <target name="run" depends="init-common">
-         <antcall target="runclient-local"/>
+        <antcall target="runclient-local"/>
         <antcall target="run-standalone-client"/>
     </target>
 
     <target name="runclient-local" depends="init-common">
-      <exec executable="${APPCLIENT}">
-        <env key="VMARGS" value=" -Djavax.net.ssl.keyStore=${mykeystore.db.file} -Djavax.net.ssl.trustStore=${mytruststore.db.file} -Djavax.net.ssl.keyStorePassword=${ssl.password} -Djavax.net.ssl.trustStorePassword=${ssl.password}"/>
-        <arg value="-client" />
-        <arg value="${assemble.dir}/${appname}AppClient.jar"/>
-      </exec>
+        <exec executable="${APPCLIENT}">
+            <env key="VMARGS" value=" -Djavax.net.ssl.keyStore=${mykeystore.db.file} -Djavax.net.ssl.trustStore=${mytruststore.db.file} -Djavax.net.ssl.keyStorePassword=${ssl.password} -Djavax.net.ssl.trustStorePassword=${ssl.password}"/>
+            <arg value="-client" />
+            <arg value="${assemble.dir}/${appname}AppClient.jar"/>
+        </exec>
     </target>
     <target name="undeploy" depends="init-common">
         <antcall target="undeploy-common"/>
     </target>
 
-  <!-- =============================================== -->
+    <!-- =============================================== -->
     <!-- Target to run the standalone client without ACC -->
     <!-- =============================================== -->
     <target name="run-standalone-client" depends="init-common">
         <property name="jndi.name" value="SSLconverter"/>
         <property name="provider.url" value="iiop://localhost:${orb.port}"/>
-        <property name="ctxfactory"
-            value="com.sun.enterprise.naming.SerialInitContextFactory"/>
+        <property name="ctxfactory" value="com.sun.enterprise.naming.SerialInitContextFactory"/>
         <echo message="provider.url used is ${provider.url}"/>
-      <java classname="${test.client}"
-        classpath="${s1astest.classpath}:${env.S1AS_HOME}/lib/appserv-rt.jar:${assemble.dir}/${appname}AppClient.jar"
-        failonerror="true" fork="true">
-        <jvmarg value="-Dorg.omg.CORBA.ORBInitialHost=localhost"/>
-        <jvmarg value="-Dorg.omg.CORBA.ORBInitialPort=${orb.port}"/>
-        <jvmarg value="-Djavax.net.ssl.keyStore=${mykeystore.db.file}"/>
-        <jvmarg value="-Djavax.net.ssl.trustStore=${mytruststore.db.file}"/>
-        <jvmarg value="-Djavax.net.ssl.keyStorePassword=${ssl.password}"/>
-        <jvmarg value="-Djavax.net.ssl.trustStorePassword=${ssl.password}"/>
-        <arg value="${provider.url}"/>
-        <arg value="${ctxfactory}"/>
-        <arg value="${jndi.name}"/>
-      </java>
+        <java classname="${test.client}"  failonerror="true" fork="true"
+            classpath="${s1astest.classpath}:${env.S1AS_HOME}/lib/appserv-rt.jar:${assemble.dir}/${appname}AppClient.jar">
+            <modulepath>
+                <pathelement path="${env.S1AS_HOME}/lib/bootstrap" />
+            </modulepath>
+            <jvmarg value="--add-modules" />
+            <jvmarg value="ALL-MODULE-PATH" />
+            <jvmarg value="-Dorg.omg.CORBA.ORBInitialHost=localhost"/>
+            <jvmarg value="-Dorg.omg.CORBA.ORBInitialPort=${orb.port}"/>
+            <jvmarg value="-Djavax.net.ssl.keyStore=${mykeystore.db.file}"/>
+            <jvmarg value="-Djavax.net.ssl.trustStore=${mytruststore.db.file}"/>
+            <jvmarg value="-Djavax.net.ssl.keyStorePassword=${ssl.password}"/>
+            <jvmarg value="-Djavax.net.ssl.trustStorePassword=${ssl.password}"/>
+            <arg value="${provider.url}"/>
+            <arg value="${ctxfactory}"/>
+            <arg value="${jndi.name}"/>
+        </java>
     </target>
 
     <target name="usage">
@@ -114,6 +117,6 @@
     </target>
 
     <target name="restart">
-      <antcall target="restart-server-instance-common"/>
+        <antcall target="restart-server-instance-common"/>
     </target>
 </project>
